freeze: #8 request-place-notes stable snapshot